@@ -213,6 +213,7 @@ game.menu.autodefend=Auto Defend
 game.menu.autoendgo=Auto End Go
 game.menu.close=Close Game
 game.menu.closemenu=Close Menu
+game.menu.colorblind=Color blind
 game.menu.leave=Leave Game
 game.menu.manual=Manual
 game.menu.save=Save Game
