@@ -6,7 +6,7 @@ CURRENT VERSION:
 	 * Save:	8
 	 * Network:	11
 
-	Android		37
+	Android		38
 	Flash GUI:	2
 	Swing GUI:	2
 	Simple GUI:	1.1.1.1
@@ -16,6 +16,8 @@ CURRENT VERSION:
 1.1.1.5
 
 	annihilate button added to FlashGUI attack screen
+
+	Android 38 option for color blind people added
 
 1.1.1.4
 
